--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 permalink: /:year:month:day/:title
-url: #Your url here
+url: https://amshq.amsl.ir
 baseurl: 
 
 # variables
-name: Your Site Name
-description: Your description here
+name: AMSHQ
+description: Wrecked AMS Head Quarter
 google_verification: null
 
 
